[workspace]
resolver = "3"
members = [
    "crates/compiler",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# oxc
oxc_allocator = "0.116.0"
oxc_parser = "0.116.0"
oxc_ast = "0.116.0"
oxc_ast_visit = "0.116.0"
oxc_span = "0.116.0"
oxc_transformer = "0.116.0"
oxc_codegen = "0.116.0"
oxc_sourcemap = "6.0.2"
oxc_resolver = "11.19.1"
oxc_diagnostics = "0.116.0"
oxc_semantic = "0.116.0"

# core
rayon = "1.10"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# css
lightningcss = "1.0.0-alpha.68"

# dev
tempfile = "3"
