[package]
name = "depgraph"
version.workspace = true
edition.workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_span.workspace = true
oxc_resolver.workspace = true
rayon.workspace = true
thiserror.workspace = true


[dev-dependencies]
tempfile.workspace = true

[[bench]]
name = "trace_bench"
harness = false
